# znote

./: .gitignore  .notes_config.json  README.md  pyproject.toml  text.md
docs/: black-hole.md
src/notes/: __init__.py  adapters.py  bh_cli.py  bh_llm.py  cli.py  config.py  costs.py  datamodel.py  graph.py  providers_openai.py  search.py  storage.py  streams.py  tags.py  transcription.py
src/notes/bh/: __init__.py  app.py  db.py  ingestion.py  state.py
src/notes/migrations/: __init__.py  reintegrate.py
test_bh/: Audio Recording.m4a
tests/: conftest.py  test_bh_cli.py  test_bh_integration.py  test_cli.py
