[project]
name = "znotes"
version = "0.1.0"
description = "A multimodal notes management system with semantic search and automatic linking"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=9.0.2",
    "requests>=2.31.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.scripts]
znote = "notes.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["notes*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']
